# anjana

./: .gitignore  .gitlab-ci.yml  .readthedocs.yml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: .codecov.yml  cicd.yml  pypi.yml  release-please.yml
anjana/: __init__.py
anjana/anonymity/: __init__.py  _beta_likeness.py  _delta_disclosure.py  _k_anonymity.py  _l_diversity.py  _t_closeness.py
anjana/anonymity/utils/: __init__.py  utils.py
anonymity/: __init__.py  _beta_likeness.py  _delta_disclosure.py  _k_anonymity.py  _l_diversity.py  _t_closeness.py
anonymity/utils/: utils.py
docs/: anonymity.rst  conf.py  intro.rst
docs/_build/doctrees/: anonymity.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  anonymity.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt  modules.rst.txt
docs/source/: anjana.anonymity.rst  anjana.anonymity.utils.rst  anjana.rst  conf.py  get_transformation.rst  getting_started.rst  index.rst  intro.rst  modules.rst  multiple_sa.rst
examples/: adult.py  adult_alpha_k_anonymity.py  adult_basic_beta_likeness.py  adult_delta_disclosure.py  adult_enhanced_beta_likeness.py  adult_get_transformation.py  adult_k_l_t.py  adult_ldiversity.py  adult_prueba.py  adult_tcloseness.py  hospital.py  hospital_extended.csv  hospital_get_transformation.py  hospital_ldiversity.py  test.csv
examples/data/: adult_k10.csv  hospital.csv
examples/hierarchies/: age.csv  country.csv  marital.csv  occupation.csv  sex.csv  workclass.csv
tests/: __init__.py  test_anonymity.py  test_unitary.py  unit_tests.py
