[metadata]
name = anjana
version = attr: anjana.__version__
keywords = databases, anonymity, privacy

author = Judith Sáinz-Pardo Díaz, Álvaro López García (IFCA (CSIC-UC))
author_email = sainzpardo@ifca.unican.es, aloga@ifca.unican.es
url = https://gitlab.ifca.es/privacy-security/anjana

description = ANJANA is an open source framework for applying different anonymity techniques.

long_description = file: README.md

license = Apache License 2.0
license_files = LICENSE

classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Security

[options]
packages = 
    anjana
    anjana.anonymity
    anjana.anonymity.utils

# Passing requirements as file only works on setuptools >= 62.6
#install_requires = file: requirements.txt

[build_sphinx]
source_dir = docs
build_dir = docs/build
all_files = 1
